samples/_failures_safe/1761610508_79d127_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5360bd38.c: In function ‘main’:
./samples/SAFE/__tmp_5360bd38.c:148:35: error: missing terminating " character
  148 |         int parsed = sscanf(line, "%31s %15s
      |                                   ^~~~~~~~~~
./samples/SAFE/__tmp_5360bd38.c:148:9: error: expected expression at end of input
  148 |         int parsed = sscanf(line, "%31s %15s
      |         ^~~
./samples/SAFE/__tmp_5360bd38.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5360bd38.c:148:9: error: expected declaration or statement at end of input
